<resources>
    <string name="app_name">Username App</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="is_this_your_picture">Is this your picture?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome!</string>
    <string name="lets_sign_up">Let\'s sign up...</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_me_up">Sign me up!</string>
</resources>
