<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editUsername"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Sign In"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForgotPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

    <TextView
        android:id="@+id/buttonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorAccent"
        android:background="?android:attr/selectableItemBackground"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>