<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="206dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textEmail"
        app:layout_constraintStart_toEndOf="@+id/textEmail"
        app:layout_constraintTop_toTopOf="@+id/textEmail" />

    <ImageView
        android:id="@+id/imagePicture"
        android:layout_width="0dp"
        android:src="@drawable/picture3"
        android:layout_marginTop="96dp"
        android:layout_height="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_this_your_picture"
        app:layout_constraintTop_toBottomOf="@id/imagePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/textQuestion"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="64dp" />

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/textQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp" />

</androidx.constraintlayout.widget.ConstraintLayout>