<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.080" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_sign_up"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/textNameSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.130"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSignUp"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/editNameSignup"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textNameSignup"
        app:layout_constraintStart_toEndOf="@+id/textNameSignup"
        app:layout_constraintTop_toBottomOf="@+id/textSignUp"
        app:layout_constraintTop_toTopOf="@+id/textNameSignup"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textEmailSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email"

        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameSignup" />

    <EditText
        android:id="@+id/editEmailSignup"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textEmailSignup"
        app:layout_constraintStart_toEndOf="@+id/textEmailSignup"
        app:layout_constraintTop_toBottomOf="@+id/textNameSignup"
        app:layout_constraintTop_toTopOf="@id/textEmailSignup"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textPswdSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailSignup" />

    <EditText
        android:id="@+id/editPswdSignup"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textPswdSignup"
        app:layout_constraintStart_toEndOf="@+id/textPswdSignup"
        app:layout_constraintTop_toBottomOf="@+id/textEmailSignup"
        app:layout_constraintTop_toTopOf="@+id/textPswdSignup"
        app:layout_constraintVertical_bias="0.666"/>

    <Button
        android:id="@+id/buttonSignMeUp"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="152dp"
        android:text="@string/sign_me_up"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPswdSignup" />


</androidx.constraintlayout.widget.ConstraintLayout>